# cmakeStudy

cmaketext/: CMakeLists.txt
demo/cmaketext/: CMakeLists.txt  app  main.cpp
demo/cmaketext/cppsore/: sss.cpp
demo2/demo2/: CMakeLists.txt  aut
demo3/: 1.cpp  CMakeLists.txt
demo4/cmaketext/: CMakeLists.txt
demo4/cmaketext/cppsore/: CMakeLists.txt
demo4/cmaketext/cppsore2/: CMakeLists.txt  add.cpp  div.cpp
demo4/cmaketext/header/: head.h
demo4/cmaketext/output/: app
demo5/cmaketext/: CMakeLists.txt
demo5/cmaketext/cppsore/: CMakeLists.txt
demo5/cmaketext/sore/: CMakeLists.txt
